--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "devcamper backend api",
   "main": "server.js",
   "scripts": {
-    "start": "node server",
+    "start": "NODE_ENV=production node server",
     "dev": "nodemon server"
   },
   "author": "saha",
