--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "devcamper_api",
   "version": "1.0.0",
-  "description": "devcamper backend api",
+  "description": "Devcamper backend API",
   "main": "server.js",
   "scripts": {
     "start": "NODE_ENV=production node server",
@@ -10,16 +10,27 @@
   "author": "saha",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "mongoose": "^8.5.1",
-    "morgan": "^1.10.0",
-    "node-geocoder": "^4.3.0",
-    "slugify": "^1.6.6"
+    "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
+    "dotenv": "^8.1.0",
+    "express": "^4.17.1",
+    "express-fileupload": "^1.2.0",
+    "express-mongo-sanitize": "^1.3.2",
+    "express-rate-limit": "^5.0.0",
+    "helmet": "^3.21.1",
+    "hpp": "^0.2.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.7.5",
+    "morgan": "^1.9.1",
+    "node-geocoder": "^3.24.0",
+    "nodemailer": "^6.3.0",
+    "randomatic": "^3.1.1",
+    "slugify": "^1.3.5",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
-    "cross-env": "^7.0.3",
-    "nodemon": "^3.1.4"
+    "nodemon": "^1.19.2"
   }
 }
